--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,13 @@ ul {
   padding: 0;
 }
 .container {
-  max-width: 1200px;
+  max-width: 75rem;
   position: relative;
 }
 .bdr {
-  border-bottom: 1px solid #ebebeb;
-  height: 46px;
-  padding: 12px 0;
+  border-bottom: 0.0625rem solid #ebebeb;
+  height: 2.875rem;
+  padding: 0.75rem 0;
 }
 .top-contact {
   position: absolute;
@@ -48,29 +48,29 @@ ul {
   content: "";
   background: #b4005a;
   position: absolute;
-  top: -12px;
+  top: -0.75rem;
   bottom: 0;
   left: 0;
   right: -100rem;
   z-index: 1;
-  height: 46px;
+  height: 2.875rem;
 }
 .top-contact a {
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #fff;
   transition: color 0.2s ease;
   display: inline-block;
   z-index: 2;
   position: relative;
-  padding: 0 27px;
-  border-right: 1px solid #e9b4ce;
+  padding: 0 1.6875rem;
+  border-right: 0.0625rem solid #e9b4ce;
 }
 .top-contact a:first-child {
-  padding-left: 46px;
+  padding-left: 2.875rem;
 }
 .top-contact a:last-child {
   border: none;
-  padding-right: 16px;
+  padding-right: 1rem;
 }
 .top-contact a:hover {
   color: #c5c5c5;
@@ -79,26 +79,26 @@ ul {
   font-size: 0.00000001rem;
 }
 .top-contact a i::before {
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #fff;
   transition: all 0.2s ease;
   border-radius: 50%;
   border: 0.0625rem solid #fff;
-  padding: 4px;
+  padding: 0.25rem;
 }
 .top-contact a:hover i::before {
   color: #c5c5c5;
   border-color: #c5c5c5;
 }
 .collapse {
-  padding-top: 50px;
-  padding-bottom: 22px;
+  padding-top: 3.125rem;
+  padding-bottom: 1.375rem;
 }
 .navbar .navbar-nav li .nav-link {
-  font-size: 15px;
+  font-size: 0.9375rem;
   color: #4c4c4c;
   text-transform: uppercase;
-  padding: 0 25px;
+  padding: 0 1.5625rem;
   transition: color 0.2s ease;
 }
 .navbar .navbar-nav li .nav-link.active {
@@ -122,14 +122,14 @@ ul {
   margin-bottom: 0;
 }
 .slick-dots {
-  bottom: 44px;
+  bottom: 2.75rem;
 }
 .slick-dots li button {
   position: absolute;
   background: transparent;
-  border: 2px solid #fff;
-  height: 14px;
-  width: 14px;
+  border: 0.125rem solid #fff;
+  height: 0.875rem;
+  width: 0.875rem;
 }
 .slick-dots li button::before {
   content: "";
@@ -137,13 +137,13 @@ ul {
 .slick-dots li.slick-active button::before {
   content: "";
   background: #b4005a;
-  height: 6px;
-  width: 6px;
+  height: 0.375rem;
+  width: 0.375rem;
   opacity: 1;
-  left: 2px;
-  right: 2px;
-  bottom: 2px;
-  top: 2px;
+  left: 0.125rem;
+  right: 0.125rem;
+  bottom: 0.125rem;
+  top: 0.125rem;
   opacity: 1;
 }
 .slider-f .slick-next::before,
@@ -153,9 +153,9 @@ ul {
 .slider-f .slick-next,
 .slider-f .slick-prev {
   background: url("../images/next.png") center center no-repeat;
-  height: 66px;
-  top: calc(50% - 33px);
-  width: 55px;
+  height: 4.125rem;
+  top: calc(50% - 2.0625rem);
+  width: 3.4375rem;
   z-index: 20;
 }
 .slider-f .slick-prev {
@@ -174,7 +174,7 @@ ul {
 }
 .single-slide {
   width: 100%;
-  min-height: 655px;
+  min-height: 40.9375rem;
   display: flex !important;
   justify-content: center;
   align-items: center;
@@ -187,63 +187,70 @@ ul {
   color: #fff;
 }
 .slider-title {
-  font-size: 36px;
+  font-size: 2.25rem;
   margin-bottom: 1.5rem;
 }
 .slider-subtitle {
-  font-size: 18px;
-  margin-bottom: 36px;
+  font-size: 1.125rem;
+  margin-bottom: 2.25rem;
 }
 .button {
-  border: 1px solid #fff;
+  border: 0.0625rem solid #fff;
   text-transform: uppercase;
   color: #fff;
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 300;
-  padding: 7px 14px;
+  padding: 0.4375rem 0.875rem;
 }
 .our-offer {
-  padding-top: 74px;
-  padding-bottom: 52px;
+  padding-top: 4.625rem;
+  padding-bottom: 3.25rem;
 }
 .our-offer-h3 {
   color: #4c4c4c;
-  font-size: 30px;
+  font-size: 1.875rem;
   text-align: center;
   position: relative;
 }
 .our-offer-h3::after {
   content: "";
   position: absolute;
-  bottom: -14px;
-  height: 2px;
+  bottom: -0.875rem;
+  height: 0.125rem;
   background: #b4005a;
   text-align: center;
   left: 0;
   right: 0;
   margin: 0 auto;
-  width: 85px;
+  width: 5.3125rem;
 }
 .our-offer-h3 span {
   color: #b4005a;
   text-transform: uppercase;
 }
+.our-offer .row {
+  align-items: flex-start;
+}
+.our-offer .col-md-8 {
+  padding: 0;
+}
 .left-col {
   background: #b4005a;
-  padding: 130px 52px 90px;
+  padding: 8.125rem 3.25rem 5.625rem;
+  min-height: 27.5rem;
 }
 .select {
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #fff;
-  background: url('../images/a.png') center right no-repeat;
-  padding-right: 31px;
-  margin-bottom: 40px;
+  background: url("../images/a.png") center right no-repeat;
+  padding-right: 1.9375rem;
+  margin-bottom: 2.5rem;
 }
 .our-offer-select-text {
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #fff;
   font-weight: 300;
-  line-height: 24px;
+  line-height: 1.5rem;
 }
 .tiles {
   display: flex;
@@ -253,17 +260,38 @@ ul {
   height: 100%;
 }
 .tile {
-  width: 50%;
+  width: 49%;
   height: 100%;
   background: #f7f7f7;
   align-content: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-height: 27.5rem;
+  padding: 2.5rem 1.8125rem 2.5rem;
+  margin-bottom: 0.125rem;
+  margin-right: 0.125rem;
+  transition: background 0.2s ease;
+}
+.tile:hover {
+  background: #ebebeb;
+}
+.tile .button {
+  color: #b4005a;
+  border-color: #b4005a;
+  padding: 0.3125rem 0.875rem;
+  text-align: center;
+  margin: 0 auto;
+  display: block;
+  transition: all 0.2s ease;
+}
+.tile:hover .button {
+  background: #b4005a;
+  color: #fff;
 }
 .img-container {
   display: block;
-  height: 96px;
+  height: 6rem;
   position: relative;
 }
 .img-container img {
@@ -274,102 +302,172 @@ ul {
   left: 0;
   margin: auto;
 }
+.image-container {
+  display: block;
+  padding-top: 66%;
+  position: relative;
+  width: 13.125rem;
+  margin-bottom: 1rem;
+}
+.image-container img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+.image-container::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  background: rgba(0, 0, 0, 0.73);
+  opacity: 0;
+  transition: opacity 0.2s ease;
+}
+.image-container:hover::after {
+  opacity: 1;
+}
+.image-container i {
+  position: absolute;
+  font-size: 3.125rem;
+  color: #fff;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: center;
+  height: 3.125rem;
+  opacity: 0;
+  transition: opacity 0.2s ease;
+}
+.image-container:hover i {
+  opacity: 1;
+}
+.tile-title {
+  font-size: 1.125rem;
+  color: #b4005a;
+  text-transform: uppercase;
+  position: relative;
+  text-align: center;
+  margin-bottom: 1.875rem;
+}
+.tile-title::after {
+  content: "";
+  position: absolute;
+  bottom: -0.9375rem;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  height: 0.125rem;
+  width: 3.75rem;
+  background: #b4005a;
+}
 .tile-text {
   color: #4c4c4c;
+  text-align: center;
+  margin-bottom: 1.875rem;
 }
 .specialty {
   background: url("../images/bg.jpg") center left no-repeat;
   background-size: cover;
-  padding-top: 50px;
-  padding-bottom: 84px;
-  -webkit-box-shadow: 0px -1px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px -1px 5px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px -1px 5px 0px rgba(0, 0, 0, 0.75);
+  padding-top: 3.125rem;
+  padding-bottom: 5.25rem;
+  -webkit-box-shadow: 0rem -0.0625rem 0.3125rem 0rem rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0rem -0.0625rem 0.3125rem 0rem rgba(0, 0, 0, 0.75);
+  box-shadow: 0rem -0.0625rem 0.3125rem 0rem rgba(0, 0, 0, 0.75);
 }
 h3,
 .h3 {
-  font-size: 34px;
+  font-size: 2.125rem;
   color: #fff;
   position: relative;
-  margin-bottom: 50px;
+  margin-bottom: 3.125rem;
 }
 .h3::after {
   content: "";
   position: absolute;
-  bottom: -25px;
+  bottom: -1.5625rem;
   left: 0;
-  width: 84px;
-  height: 2px;
+  width: 5.25rem;
+  height: 0.125rem;
   background: #fff;
 }
 h5,
 .h5 {
   font-weight: 300;
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #fff;
-  margin-bottom: 50px;
+  margin-bottom: 3.125rem;
+}
+.automatyka h5 {
+  font-weight: 400;
 }
 .p-container {
-  width: 643px;
-  margin-bottom: 44px;
+  width: 40.1875rem;
+  margin-bottom: 2.75rem;
 }
 .p-container p {
   color: #fff;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 300;
-  line-height: 36px;
+  line-height: 2.25rem;
 }
 .contact {
-  padding-top: 70px;
-  padding-bottom: 54px;
+  padding-top: 4.375rem;
+  padding-bottom: 3.375rem;
 }
 .contact-item {
-  padding-bottom: 38px;
-  padding-left: 48px;
+  padding-bottom: 2.375rem;
+  padding-left: 3rem;
   position: relative;
 }
 .contact-item i {
   position: absolute;
-  left: -38px;
-  top: 4px;
+  left: -2.375rem;
+  top: 0.25rem;
   border-radius: 50%;
-  border: 1px solid #b4005a;
-  padding: 5px;
-  height: 27px;
-  width: 27px;
+  border: 0.0625rem solid #b4005a;
+  padding: 0.3125rem;
+  height: 1.6875rem;
+  width: 1.6875rem;
   text-align: center;
   color: #b4005a;
 }
-
 h4,
 .h4 {
   text-align: center;
-  font-size: 30px;
+  font-size: 1.875rem;
   color: #b4005a;
   position: relative;
   text-transform: uppercase;
-  margin-bottom: 64px;
+  margin-bottom: 4rem;
 }
 .h4::after {
   content: "";
   position: absolute;
-  bottom: -14px;
+  bottom: -0.875rem;
   left: 0;
   right: 0;
   background: #b4005a;
-  height: 2px;
-  width: 84px;
+  height: 0.125rem;
+  width: 5.25rem;
   margin: 0 auto;
 }
 h6,
 .h6 {
-  font-size: 18px;
+  font-size: 1.125rem;
   color: #4c4c4c;
 }
 .pageContact p,
 .contact p {
   font-weight: 300;
-  line-height: 33px;
+  line-height: 2.0625rem;
   margin: 0;
   position: relative;
 }
@@ -378,21 +476,21 @@ footer iframe {
   display: block;
 }
 footer {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 300;
   color: #fff;
 }
 .footer-bottom {
   background: #4c4c4c;
-  padding-top: 36px;
-  padding-bottom: 20px;
+  padding-top: 2.25rem;
+  padding-bottom: 1.25rem;
 }
 .footer-copyright {
-  border-bottom: 1px solid #fff;
+  border-bottom: 0.0625rem solid #fff;
 }
 .arrtop {
   background: url("../images/arrtop.jpg") top left no-repeat;
-  padding-left: 10px;
+  padding-left: 0.625rem;
   color: #fff;
   position: relative;
   display: inline-block;
@@ -403,8 +501,8 @@ footer {
   position: absolute;
   background: #4c4c4c;
   z-index: 1;
-  top: -53px;
-  right: 34px;
+  top: -3.3125rem;
+  right: 2.125rem;
   height: 2.125rem;
   width: 2.125rem;
   -webkit-transform: rotate(45deg);
@@ -444,7 +542,7 @@ footer {
 .hero-img {
   background: url("../images/hero.jpg") center center no-repeat;
   background-size: cover;
-  height: 237px;
+  height: 14.8125rem;
   display: flex;
   text-align: center;
   align-content: center;
@@ -455,8 +553,8 @@ footer {
   display: none;
 }
 .content {
-  padding-top: 48px;
-  padding-bottom: 96px;
+  padding-top: 3rem;
+  padding-bottom: 6rem;
 }
 .gr {
   background: rgba(255, 255, 255, 1);
@@ -501,7 +599,7 @@ footer {
 }
 .content .h4 {
   text-transform: none;
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
 }
 .content-icon {
   text-align: center;
@@ -510,7 +608,7 @@ footer {
 }
 .content p {
   color: #2e2e2e;
-  line-height: 24px;
+  line-height: 1.5rem;
   margin-bottom: 1.5rem;
 }
 .content ul {
@@ -520,46 +618,46 @@ footer {
   color: #2e2e2e;
   font-weight: 300;
   position: relative;
-  padding: 7px 0 7px 18px;
+  padding: 0.4375rem 0 0.4375rem 1.125rem;
 }
 .content ul li::before {
   content: "";
   position: absolute;
-  top: 15px;
+  top: 0.9375rem;
   left: 0;
   background: url("../images/liarrow.jpg");
-  height: 10px;
-  width: 6px;
+  height: 0.625rem;
+  width: 0.375rem;
 }
 .pageContact-content {
-  padding-top: 48px;
+  padding-top: 3rem;
 }
 .pageContact h5,
 .content h5 {
-  font-size: 30px;
+  font-size: 1.875rem;
   color: #4c4c4c;
   position: relative;
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem;
 }
 .pageContact h5::after,
 .content h5::after {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -20px;
+  bottom: -1.25rem;
   background: #b4005a;
-  height: 2px;
-  width: 85px;
+  height: 0.125rem;
+  width: 5.3125rem;
 }
 .pageContact h5 span {
   color: #b4005a;
 }
 .content-bottom {
-  padding-right: 288px;
+  padding-right: 18rem;
 }
 .content-bottom p {
   font-weight: 300;
-  line-height: 30px;
+  line-height: 1.875rem;
 }
 .gr {
   position: relative;
@@ -567,34 +665,65 @@ footer {
 .gr-img {
   position: absolute;
   right: 0;
-  bottom: -4px;
+  bottom: -0.25rem;
 }
 .subpage-hr {
   margin: 0;
-  height: 12px;
+  height: 0.75rem;
   background: #96004b;
   position: relative;
   z-index: 10;
 }
 .invite {
   background: #b4005a;
-  padding: 12px 0;
+  padding: 0.75rem 0;
 }
 .invite-text {
-  font-size: 30px;
+  font-size: 1.875rem;
   text-align: center;
   text-transform: uppercase;
   color: #fff;
 }
 .pageContact-bdr {
-  border-left: 1px solid #b4005a;
+  border-left: 0.0625rem solid #b4005a;
 }
+.hr-mod {
+  height: 0.1875rem;
+}
+.realizations {
+  padding-top: 3rem;
+  padding-bottom: 2.125rem;
+}
+.realizations .our-offer-h3 {
+  text-align: left;
+  margin-bottom: 2.5rem;
+}
+.realizations .our-offer-h3::after {
+  right: auto;
+}
+.realizations .content {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+.realizations-img {
+  -webkit-box-shadow: 0.1875rem -0.1875rem 0.625rem 0rem rgba(156, 147, 156, 1);
+  -moz-box-shadow: 0.1875rem -0.1875rem 0.625rem 0rem rgba(156, 147, 156, 1);
+  box-shadow: 0.1875rem -0.1875rem 0.625rem 0rem rgba(156, 147, 156, 1);
+}
+.realizations ul li {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+.realizations ul li::before {
+  top: 0.5rem;
+}
+
 @media only screen and (max-width: 1700px) {
   .gr-img {
     width: 30%;
   }
   .content-bottom {
-    padding-right: 350px;
+    padding-right: 21.875rem;
   }
 }
 @media only screen and (max-width: 1480px) {
@@ -602,7 +731,6 @@ footer {
     background-position: 47% 100%;
   }
 }
-
 @media only screen and (max-width: 1100px) {
   .specialty {
     background: #b4005a;
@@ -611,10 +739,9 @@ footer {
     width: auto;
   }
 }
-
 @media only screen and (max-width: 991px) {
   .navbar-brand {
-    right: 10px;
+    right: 0.625rem;
     left: auto;
   }
   .navbar .navbar-nav li .nav-link {
@@ -628,21 +755,14 @@ footer {
     padding-right: 0;
   }
   .hero-img h3 {
-    margin-top: 30px;
+    margin-top: 1.875rem;
   }
 }
-
-@media only screen and (max-width: 800px) {
-}
-
-@media only screen and (max-width: 767px) {
-}
-
 @media only screen and (max-width: 630px) {
   .top-contact a {
     border: none;
     padding: 0 0.5rem;
-    font-size: 11px;
+    font-size: 0.6875rem;
   }
   .footer-copyright {
     display: block;
@@ -667,7 +787,7 @@ footer {
     display: none;
   }
   .top-contact a:first-child {
-    padding-left: 10px;
+    padding-left: 0.625rem;
   }
   .navbar-brand {
     width: 60%;
